include/wtf.h

//! Result codes for all WebTransport operations
typedef enum {
    WTF_SUCCESS = 0,
    WTF_ERROR_INVALID_PARAMETER,
    WTF_ERROR_OUT_OF_MEMORY,
    WTF_ERROR_INTERNAL,
    WTF_ERROR_CONNECTION_ABORTED,
    WTF_ERROR_STREAM_ABORTED,
    WTF_ERROR_INVALID_STATE,
    WTF_ERROR_BUFFER_TOO_SMALL,
    WTF_ERROR_NOT_FOUND,
    WTF_ERROR_REJECTED,
    WTF_ERROR_TIMEOUT,
    WTF_ERROR_TLS_HANDSHAKE_FAILED,
    WTF_ERROR_PROTOCOL_VIOLATION,
    WTF_ERROR_FLOW_CONTROL
} wtf_result_t;
//! Detailed error information
typedef struct {
    uint32_t error_code;        //! Numeric error code
    const char* description;    //! Human-readable description
    bool is_application_error;  //! True if application-level error
    bool is_transport_error;    //! True if transport-level error
    bool is_protocol_error;     //! True if protocol violation
} wtf_error_details_t;
// #endregion

// #region Error and Utility Functions

//! Get error string for result code
//! @param result error code to convert
//! @return human-readable error description
WTF_API const char* wtf_result_to_string(wtf_result_t result);
//! Convert WebTransport error to string
//! @param error_code WebTransport error code
//! @return human-readable error description
WTF_API const char* wtf_webtransport_error_to_string(uint32_t error_code);
//! Get detailed error information
//! @param error_code error code to analyze
//! @param details pointer to error details structure to fill
//! @return WTF_SUCCESS on success, error code on failure
WTF_API wtf_result_t wtf_get_error_details(uint32_t error_code, wtf_error_details_t* details);
//! Check if error code is valid application error
//! @param error_code error code to validate
//! @return true if error code is in valid application range
WTF_API bool wtf_is_valid_application_error(uint32_t error_code);
//! Convert HTTP/3 error to string
//! @param http3_error HTTP/3 error code
//! @return human-readable error description
WTF_API const char* wtf_http3_error_to_string(uint64_t http3_error);