csharp/Native/Native.cs


        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* wtf_result_to_string(wtf_result_t result);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* wtf_webtransport_error_to_string([NativeTypeName("uint32_t")] uint error_code);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern wtf_result_t wtf_get_error_details([NativeTypeName("uint32_t")] uint error_code, wtf_error_details_t* details);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("_Bool")]
        public static extern byte wtf_is_valid_application_error([NativeTypeName("uint32_t")] uint error_code);

        [DllImport("wtf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* wtf_http3_error_to_string([NativeTypeName("uint64_t")] ulong http3_error);
    }
}
